syntax = "proto3";
package ChatServer.Transmissions;

message EncryptedTransmission {
    bytes EncryptedTransmission = 1;
}