syntax = "proto3";
package ChatServer.Transmissions;

message OnboardingResponse {
    bytes userID = 1;
    string name = 2;
}